# visual_reasoning

./: .gitignore  README.md  ds_zero2.json  ds_zero3.json  evaluate_gsm8k.py  gpt_advice.md  lat_plan.md  make_train_jsonl.py  pyproject.toml  resize_thought_images.py  run_precompute_latents.sh  run_stage1.sh  run_stage2.sh  run_stage3.sh  run_verify_latent.sh  verify_latent_output.py
SFT/: README.md  __init__.py  attn_mask.py  collate.py  data.py  main.py  patch_qwen25vl_latent.py  precompute_teacher_latents.py  prompting.py  requirements.txt  schemas.py  trainer.py
SFT/patches/: qwen2_5_vl_latent.py
